--- a/src/pages/Dashboard/components/style.css
+++ b/src/pages/Dashboard/components/style.css
@@ -138,6 +138,11 @@
   padding: 10px 8px;
 }
 
+.dashboard-panel .sidebar-container .sidebar .menu .sub-menu li a.active{
+  color: #000;
+  background-color: #f6f6f6;
+}
+
 @keyframes open-menu {
   to {
     top: 0px;
@@ -250,8 +255,17 @@
   width: calc(100% - 100px);
 }
 
+.navbar-search{
+  width: 30%;
+}
 
-.dashboard-panel .main-content{
+.navbar-search input{
+  border-radius: 20px;
+}
+
+/* Main Content */
+
+.dashboard-panel .main-content {
   position: fixed;
   top: 10vh;
   left: 300px;
@@ -263,14 +277,83 @@
   overflow-y: auto;
 }
 
-
-.dashboard-panel .main-content.active{
+.dashboard-panel .main-content.active {
   left: 100px;
   width: calc(100% - 110px);
 }
 
-.breadcrumb a{
+.breadcrumb a {
   text-decoration: none;
   color: #000;
   font-weight: 600;
+}
+
+.main-content .content {
+  margin-top: 20px;
+}
+
+.main-content .content .card.table-card {
+  max-height: 500px;
+  overflow: hidden;
+}
+
+.main-content .content .card.table-card .card-body {
+  padding: 0 !important;
+}
+
+
+/* Table */
+
+.table-responsive::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #f5f5f5;
+}
+
+.table-responsive::-webkit-scrollbar {
+  width: 12px;
+  background-color: #f5f5f5;
+}
+
+.table-responsive::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
+}
+
+.table-responsive {
+  height: 450px;
+}
+
+table {
+  position: relative;
+}
+
+thead {
+  overflow: scroll !important;
+}
+
+th {
+  position: sticky !important;
+  top: 0 !important;
+  z-index: 999;
+  background-color: #e3eaef !important;
+}
+
+table td p {
+  font-size: 0.9rem;
+}
+
+table th {
+  font-size: 0.85em;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+}
+
+.table-search {
+  border-radius: 20px;
+  padding-left: 10px;
+  padding-right: 5px;
+  outline: none;
+  height: 35px;
 }
