--- a/src/pages/Panel/components/style.css
+++ b/src/pages/Panel/components/style.css
@@ -51,13 +51,6 @@
   height: 38px;
 }
 
-.dashboard-panel .sidebar-container .sidebar .user-img img {
-  width: 100%;
-  object-fit: cover;
-  border-radius: 50%;
-  height: 100%;
-}
-
 .dashboard-panel .sidebar-container .sidebar .user-details .name {
   font-size: 14px;
   font-weight: 500;
@@ -90,7 +83,8 @@
   margin-bottom: 5px;
 }
 
-.dashboard-panel .sidebar-container .sidebar .menu ul li .menu-link, .dashboard-panel .sidebar-container .sidebar .menu ul li a {
+.dashboard-panel .sidebar-container .sidebar .menu ul li .menu-link,
+.dashboard-panel .sidebar-container .sidebar .menu ul li a {
   display: flex;
   align-items: center;
   gap: 10px;
@@ -104,8 +98,10 @@
   position: relative;
 }
 
-.dashboard-panel .sidebar-container .sidebar .menu ul li .menu-link:hover, .dashboard-panel .sidebar-container .sidebar .menu ul li a:hover,
-.dashboard-panel .sidebar-container .sidebar .menu ul li.active > .menu-link, .dashboard-panel .sidebar-container .sidebar .menu ul li.active > a {
+.dashboard-panel .sidebar-container .sidebar .menu ul li .menu-link:hover,
+.dashboard-panel .sidebar-container .sidebar .menu ul li a:hover,
+.dashboard-panel .sidebar-container .sidebar .menu ul li.active > .menu-link,
+.dashboard-panel .sidebar-container .sidebar .menu ul li.active > a {
   color: #000;
   background-color: #f6f6f6;
 }
@@ -391,4 +387,67 @@ table th {
     left: 0px;
     transition: 0.3s all;
   }
+}
+
+/* Profile Page */
+.user__profile__content {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.user__profile__img {
+  width: 140px;
+  height: 140px;
+}
+
+.user__profile__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.file-input input {
+  border: none;
+}
+
+.image-upload {
+  position: relative;
+  border: none;
+  outline: none;
+  background-color: none;
+  background: none;
+}
+
+.image-upload .round {
+  position: absolute;
+  cursor: pointer;
+  bottom: 0;
+  right: 0;
+  background: #000;
+  width: 32px;
+  height: 32px;
+  line-height: 33px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+.image-upload .round input[type="file"] {
+  position: absolute;
+  transform: scale(2);
+  opacity: 0;
+}
+
+input[type="file"]::-webkit-file-upload-button {
+  cursor: pointer;
+}
+
+.myaccount .form-input input:focus,
+.form-input input:valid {
+  border: 2px solid #f4f4f4;
 }
